fix alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,5 +12,5 @@ app-puzzle {
 .footer {
     height: 32px;
     font-size: 16px;
-    justify-content: end;
+    justify-content: flex-end;
 }
